Add title.png to navbar in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,9 @@
     <!-- Codestar example Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">Harmonia Hall</a>
+            <a class="navbar-brand" href="{% url 'home' %}">
+                <img src="{% static 'images/title.png' %}" alt="Harmonia Hall" style="height: 40px; width: auto;">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
