--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,16 @@ body {
     background-color: #f9fafc;
 }
 
+html, body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
+
 /* Used for navbar in "Harmonia Hall" logo */
 .brand {
     font-family: Lato, sans-serif;
