--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,7 @@ body {
     background-color: #f9fafc;
 }
 
+/* Keep footer pinned to bottom of window */
 html, body {
     height: 100%;
     display: flex;
@@ -35,6 +36,10 @@ main {
     text-decoration: underline;
 }
 
+/* Add gap between conatiner for forms and footer */
+.container {
+    margin-bottom: 5rem;
+}
 
 .light-bg {
     background-color: #fff;
