--- a/templates/about.html
+++ b/templates/about.html
@@ -16,7 +16,7 @@
             <div class="card h-100">
                 <img src="{% static 'images/history.jpg' %}" class="card-img-top" alt="History" style="height: 300px; object-fit: cover;">
                 <div class="card-body">
-                    <h5 class="card-title">Our History</h5>
+                    <h5 class="card-title">History</h5>
                     <p class="card-text">Harmonia Hall has been a cultural landmark since its founding in 1920. Over the decades, we have hosted countless performances, from classical concerts to contemporary shows, becoming a beloved venue for artists and audiences alike.</p>
                 </div>
             </div>
@@ -38,7 +38,7 @@
             <div class="card h-100">
                 <img src="{% static 'images/events.jpg' %}" class="card-img-top" alt="Events" style="height: 250px; object-fit: cover;">
                 <div class="card-body">
-                    <h5 class="card-title">Our Events</h5>
+                    <h5 class="card-title">Events</h5>
                     <p class="card-text">From world-renowned artists to emerging talents, Harmonia Hall hosts a diverse array of events throughout the year. Our carefully curated lineup ensures there is something for every music lover to enjoy.</p>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">Our Architecture</h5>
+                            <h5 class="card-title">Architecture</h5>
                             <p class="card-text">Harmonia Hall boasts stunning architecture that blends historic charm with modern amenities. This was designed by one of the leading architects of the 20th century, Frank Lloyd Wright. Our beautifully restored interior provides an intimate setting that enhances the concert experience for both performers and audiences.</p>
                         </div>
                     </div>
