--- a/templates/base.html
+++ b/templates/base.html
@@ -114,7 +114,7 @@
         {% endblock content %}
     </main>
      <!-- Footer -->
-    <footer class="footer mt-auto py-3 dark-bg">
+    <footer class="footer py-3 dark-bg">
         <p class="m-0 text-center text-white">
             {% block copyright %}
             2026 Harmonia Hall. All rights reserved.
