Center auth forms and buttons for improved layout consistency

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,6 +41,20 @@ main {
     margin-bottom: 5rem;
 }
 
+/* Center auth forms (login, signup, password reset, etc.) */
+.container form {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+/* Center form buttons */
+.container form button,
+.container form .btn {
+    display: inline-block;
+    margin: 0.5rem auto;
+    min-width: 150px;
+}
+
 .light-bg {
     background-color: #fff;
 }
@@ -139,4 +153,5 @@ main {
 .approval {
     color: rgb(222, 146, 168);
 }
+
 /* End of Codestar Blog's CSS */
