--- a/templates/base.html
+++ b/templates/base.html
@@ -120,10 +120,11 @@
             2026 Harmonia Hall. All rights reserved.
             {% endblock copyright %}
         </p>
-        <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
-            <i class="fab fa-twitter-square ms-3"></i>
-            <i class="fab fa-instagram-square ms-3"></i>
-            <i class="fab fa-youtube-square ms-3"></i>
+        <p class="m-0 text-center text-white">Follow us: 
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link"><i class="fab fa-twitter-square"></i></a>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link"><i class="fab fa-instagram-square"></i></a>
+            <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link"><i class="fab fa-youtube-square"></i></a>
         </p>
     </footer>
 
