--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,8 +7,9 @@ body {
     background-color: #f9fafc;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
-    min-height: 100dvh;
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 main {
