Fix issue with conflict between flexbox and bootsrap in base.html causing floating footer.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -205,6 +205,8 @@ main {
 /* Footer styling */
 footer {
     font-family: Lato, sans-serif;
+    margin-top: auto;
+    margin-bottom: 0;
 }
 
 footer i {
