--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 {% url 'about' as about_url %}
 
 <!DOCTYPE html>
-<html class="h-100" lang="en">
+<html lang="en">
 
 <head>
     <title>Harmonia Hall</title>
