--- a/templates/base.html
+++ b/templates/base.html
@@ -35,9 +35,8 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 </head>
-<body>
-    <!-- Navigation Goes here -->
-    <!-- Codestar example Navigation -->
+<body class="d-flex flex-column min-vh-100">
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">
@@ -93,7 +92,6 @@
             </div>
         </div>
     </nav>
-    <!-- End of Codestar example navigation -->
     
     <!-- Messages -->
     {% if messages %}
@@ -107,14 +105,14 @@
         </div>
     {% endif %}
     
-    <!-- Main Goes here -->
+    <!-- Main content -->
     <main>
         {% block content %}
-        <!-- Content Goes here -->
+        <!-- Main Content Goes here -->
         {% endblock content %}
     </main>
      <!-- Footer -->
-    <footer class="footer py-3 dark-bg">
+    <footer class="footer py-3 dark-bg mt-auto">
         <p class="m-0 text-center text-white">
             {% block copyright %}
             2026 Harmonia Hall. All rights reserved.
