--- a/templates/base.html
+++ b/templates/base.html
@@ -119,10 +119,10 @@
             {% endblock copyright %}
         </p>
         <p class="m-0 text-center text-white">Follow us: 
-            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link"><i class="fab fa-facebook-square"></i></a>
-            <a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link"><i class="fab fa-twitter-square"></i></a>
-            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link"><i class="fab fa-instagram-square"></i></a>
-            <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link"><i class="fab fa-youtube-square"></i></a>
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link"><i class="fab fa-facebook-square social-icon"></i></a>
+            <a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link"><i class="fab fa-twitter-square social-icon"></i></a>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link"><i class="fab fa-instagram-square social-icon"></i></a>
+            <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link"><i class="fab fa-youtube-square social-icon"></i></a>
         </p>
     </footer>
 
