--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="{% static 'images/title.png' %}" alt="Harmonia Hall" style="height: 40px; width: auto;">
+                <img src="{% static 'images/title.webp' %}" alt="Harmonia Hall" style="height: 40px; width: auto;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -121,10 +121,10 @@
             {% endblock copyright %}
         </p>
         <p class="m-0 text-center text-white">Follow us: 
-            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link"><i class="fab fa-facebook-square social-icon"></i></a>
-            <a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link"><i class="fab fa-twitter-square social-icon"></i></a>
-            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link"><i class="fab fa-instagram-square social-icon"></i></a>
-            <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link"><i class="fab fa-youtube-square social-icon"></i></a>
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link" aria-label="Facebook"><i class="fab fa-facebook-square social-icon"></i></a>
+            <a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link" aria-label="Twitter"><i class="fab fa-twitter-square social-icon"></i></a>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link" aria-label="Instagram"><i class="fab fa-instagram-square social-icon"></i></a>
+            <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer" class="text-white social-link" aria-label="YouTube"><i class="fab fa-youtube-square social-icon"></i></a>
         </p>
     </footer>
 
