Add title and meta description blocks to templates for improved SEO

--- a/events/templates/events/index.html
+++ b/events/templates/events/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
+{% block title %}Harmonia Hall - Book Concert Tickets Online{% endblock %}
+{% block meta_description %}Browse featured concerts and live music events at Harmonia Hall. Easy online ticket booking for the best performances in town.{% endblock %}
 {% block content %}
 
 <!-- index.html content starts here -->
