--- a/events/templates/events/whats_on.html
+++ b/events/templates/events/whats_on.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
-
+{% block title %}Upcoming Events - Harmonia Hall{% endblock %}
+{% block meta_description %}View all upcoming concerts and events at Harmonia Hall. Check dates, times, venues, and book your tickets online for live music performances.{% endblock %}
 {% block content %}
 <div class="container mt-5">
     <h1>Upcoming Events</h1>
